WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241253
[Cocoa]: Mail compose does not use Bulgarian letter forms when the system language is set to Bulgarian
https://bugs.webkit.org/show_bug.cgi?id=241253
Summary
[Cocoa]: Mail compose does not use Bulgarian letter forms when the system l...
Myles C. Maxfield
Reported
2022-06-02 20:39:06 PDT
[Cocoa] Mail compose doesn't use Bulgarian letter forms when the system language is set to Bulgarian
Attachments
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2022-06-02 20:42:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1266
Tim Nguyen (:ntim)
Comment 2
2022-06-03 03:00:26 PDT
rdar://94295531
EWS
Comment 3
2022-06-03 16:46:22 PDT
Committed
r295250
(
251298@main
): <
https://commits.webkit.org/251298@main
> Reviewed commits have been landed. Closing PR #1266 and removing active labels.
Karl Rackler
Comment 4
2022-08-24 09:20:59 PDT
fast/text/bulgarian-system-language-shaping.html is constant failure for [ macOS wk1 ]. History:
https://results.webkit.org/?suite=layout-tests&test=fast%2Ftext%2Fbulgarian-system-language-shaping.html&platform=mac&flavor=wk1&limit=50000K
Image Diff:
https://github.com/WebKit/WebKit/blob/main/LayoutTests/fast/text/bulgarian-system-language-shaping-expected-mismatch.html
I have marked this test as pass like other expectations already set.
EWS
Comment 5
2022-08-24 09:36:31 PDT
Test gardening commit
253725@main
(9465241845a9): <
https://commits.webkit.org/253725@main
> Reviewed commits have been landed. Closing PR #3614 and removing active labels.
EWS
Comment 6
2022-08-24 17:31:18 PDT
Test gardening commit
253756@main
(fd9ba06a2fc4): <
https://commits.webkit.org/253756@main
> Reviewed commits have been landed. Closing PR #3638 and removing active labels.
EWS
Comment 7
2022-08-24 17:41:37 PDT
Test gardening commit
253758@main
(ffd0b41fb6da): <
https://commits.webkit.org/253758@main
> Reviewed commits have been landed. Closing PR #3640 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug