[Cocoa] Mail compose doesn't use Bulgarian letter forms when the system language is set to Bulgarian https://bugs.webkit.org/show_bug.cgi?id=241253 <rdar://problem/94295531>

Reviewed by Cameron McCormack.

Mail compose doesn't set `lang`, which causes us to have a null locale string.
String::createCFString() transforms a null string to CFSTR(""), which indicates to Core Text
that it shouldn't use the shaping from the system language. Instead, if the locale string
is null, we should give Core Text a null locale string, so they use the correct shaping.

* LayoutTests/TestExpectations:
* LayoutTests/fast/text/bulgarian-system-language-shaping-expected-mismatch.html: Added.
* LayoutTests/fast/text/bulgarian-system-language-shaping.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/platform/graphics/coretext/FontCoreText.cpp:
(WebCore::Font::applyTransforms const):

Canonical link: https://commits.webkit.org/251298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295250 268f45cc-cd09-0410-ab3c-d52691b4dbfc